# agoraios

./: README.md  docker-compose.yml  main.py  pyproject.toml
src/scraper/: calculations.py  encode_url.py  parser.py
src/tests/: test_encoding.py
